--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name='viewport' content='width=device-width initial-scale=1.0'>
     <title>Boilermaker</title>
     <link rel="stylesheet" href="/style.css" />
+    <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" media="all" /> -->
     <script defer src="/bundle.js"></script>
   </head>
   <body>
